--- a/Building Midterm Grader.ipynb
+++ b/Building Midterm Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_scores = list()\n",
     "for index, row in df.iterrows():\n",
     "    raw = pd.DataFrame({'Standard':row.index, 'Marks':row.values})\n",
-    "    raw.set_index(\"Standard\", inplace=True)\n",
     "    class_scores.append( {\"Name\":index, \"Marks\":summative(row.apply(marks_to_score)), \"Raw Data\":raw})\n",
     "\n",
     "## Dataset for this is a hashset\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
     "template = env.get_template(\"template.html\")\n",
     "template_vars = {\n",
     "    \"Name\": class_scores[15]['Name'],\n",
-    "    \"raw_data\": class_scores[15]['Raw Data'].to_html(classes=[\"paleGrayRows\"]),\n",
+    "    \"raw_data\": class_scores[15]['Raw Data'].to_html(index=False, classes=[\"paleGrayRows\"]),\n",
     "    \"score\": class_scores[15]['Marks']['Score'],\n",
     "    \"number_of_ns\": class_scores[15]['Marks']['Number of ns'],\n",
     "    \"letter_grade\": \"QQQQQQQQQQ\",\n",
@@ -114,7 +113,7 @@
     "\n",
     "output = template.render(template_vars)\n",
     "#print(output)\n",
-    "HTML(string=output).write_pdf(\"test.pdf\",stylesheets=[\"./report.css\"])\n"
+    "HTML(string=output).write_pdf(\"test.pdf\",stylesheets=[\"./report.css\"])"
    ]
   }
  ],
