A little more styling of the report. And drop na's

--- a/Building Midterm Grader.ipynb
+++ b/Building Midterm Grader.ipynb
@@ -72,13 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_scores = list()\n",
     "for index, row in df.iterrows():\n",
     "    raw = pd.DataFrame({'Standard':row.index, 'Marks':row.values})\n",
+    "    raw = raw.dropna()\n",
     "    class_scores.append( {\"Name\":index, \"Marks\":summative(row.apply(marks_to_score)), \"Raw Data\":raw})\n",
     "\n",
     "## Dataset for this is a hashset\n",
@@ -91,23 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's export the PDF report:\n",
     "from jinja2 import Environment, FileSystemLoader\n",
     "from weasyprint import HTML\n",
+    "from datetime import date\n",
+    "\n",
+    "today = date.today().strftime(\"%B %d, %Y\")\n",
     "\n",
     "env = Environment(loader=FileSystemLoader('.'))\n",
     "template = env.get_template(\"template.html\")\n",
     "template_vars = {\n",
     "    \"Name\": class_scores[15]['Name'],\n",
-    "    \"raw_data\": class_scores[15]['Raw Data'].to_html(index=False, classes=[\"paleGrayRows\"]),\n",
+    "    \"raw_data\": class_scores[15]['Raw Data'].to_html(index=False, bold_rows=False, classes=[\"paleGrayRows\"]),\n",
     "    \"score\": class_scores[15]['Marks']['Score'],\n",
     "    \"number_of_ns\": class_scores[15]['Marks']['Number of ns'],\n",
     "    \"letter_grade\": \"QQQQQQQQQQ\",\n",
-    "    \"date\": \"today...(?)\",\n",
+    "    \"date\": today,\n",
     "    \"midterm_or_final\": \"Midterm\"\n",
     "}\n",
     "\n",
