A little more editing. Plus finally correct html

--- a/Building Midterm Grader.ipynb
+++ b/Building Midterm Grader.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_threshold = \"<table class='paleGrayRows'> <thead> <tr> <th>Final Letter Grade</th> <th>Points Needed</th> <th>WebAssign Homework (entire course)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 51 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 45 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 39 points and at most 6 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 33 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 33 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
+    "midterm_threshold = \"<table class='paleGrayRows'> <thead> <tr> <th>Midterm Letter Grade</th> <th>Course Standards</th> <th>WebAssign Homework (12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 19 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 17 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 13 points and at most 4 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 11 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 11 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +90,7 @@
     "for index, row in df.iterrows():\n",
     "    raw = pd.DataFrame({'Standard':row.index, 'Marks':row.values})\n",
     "    raw = raw.dropna()\n",
-    "    class_scores.append( {\"Name\":index, \"Marks\":summative(row.apply(marks_to_score)), \"Raw Data\":raw})\n",
+    "    class_scores.append( {\"midterm_or_final\":\"Midterm\", \"Name\":index, \"Marks\":summative(row.apply(marks_to_score)), \"Raw Data\":raw})\n",
     "\n",
     "## Dataset for this is a hashset\n",
     "## Key      |   Data\n",
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,23 +111,33 @@
     "from weasyprint import HTML\n",
     "from datetime import date\n",
     "\n",
-    "today = date.today().strftime(\"%B %d, %Y\")\n",
     "\n",
-    "env = Environment(loader=FileSystemLoader('.'))\n",
-    "template = env.get_template(\"template.html\")\n",
-    "template_vars = {\n",
-    "    \"Name\": class_scores[15]['Name'],\n",
-    "    \"raw_data\": class_scores[15]['Raw Data'].to_html(index=False, bold_rows=False, classes=[\"paleGrayRows\"]),\n",
-    "    \"score\": class_scores[15]['Marks']['Score'],\n",
-    "    \"number_of_ns\": class_scores[15]['Marks']['Number of ns'],\n",
-    "    \"letter_grade\": \"QQQQQQQQQQ\",\n",
-    "    \"date\": today,\n",
-    "    \"midterm_or_final\": \"Midterm\"\n",
-    "}\n",
+    "## grade threshold temporary stuff:\n",
+    "grade_threshold = midterm_threshold\n",
     "\n",
-    "output = template.render(template_vars)\n",
-    "#print(output)\n",
-    "HTML(string=output).write_pdf(\"test.pdf\",stylesheets=[\"./report.css\"])"
+    "\n",
+    "def print_the_report_for(individual):\n",
+    "    \n",
+    "    # update the date in the off chance it runs between cusp of one day and the next\n",
+    "    today = date.today().strftime(\"%B %d, %Y\")\n",
+    "    env = Environment(loader=FileSystemLoader('.'))\n",
+    "    template = env.get_template(\"template.html\")\n",
+    "    template_vars = {\n",
+    "        \"Name\": individual['Name'],\n",
+    "        \"raw_data\": individual['Raw Data'].to_html(index=False, bold_rows=False, classes=[\"paleGrayRows\"]),\n",
+    "        \"score\": individual['Marks']['Score'],\n",
+    "        \"number_of_ns\": individual['Marks']['Number of ns'],\n",
+    "        \"letter_grade\": \"QQQQQQQQQQ\",\n",
+    "        \"date\": today,\n",
+    "        \"midterm_or_final\": individual['midterm_or_final'],\n",
+    "        \"grade_threshold\": final_threshold\n",
+    "    }\n",
+    "\n",
+    "    output = template.render(template_vars)\n",
+    "    #print(output)\n",
+    "    HTML(string=output).write_pdf(\"test.pdf\",stylesheets=[\"./report.css\"])\n",
+    "    \n",
+    "print_the_report_for(class_scores[13])"
    ]
   }
  ],
