I think this version will work for the midterm. Huzzah.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,16 @@
     "midterm = { \"A\": {\"Points\": 19, \"Below G\": 0, \"WebAssign\": 80},\n",
     "           \"B\": {\"Points\": 17, \"Below G\": 2, \"WebAssign\": 70},\n",
     "           \"C\": {\"Points\": 13, \"Below G\": 4, \"WebAssign\": 60},\n",
-    "           \"D\": {\"Points\": 11, \"Below G\": 0, \"WebAssign\": 50},\n",
-    "           \"F\": {\"Points\": 0, \"Below G\": 0, \"WebAssign\": 0}\n",
+    "           \"D\": {\"Points\": 11, \"Below G\": 1000, \"WebAssign\": 50},  \n",
+    "           \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
+    "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
     "\n",
     "final = { \"A\": {\"Points\": 51, \"Below G\": 0, \"WebAssign\": 80},\n",
     "         \"B\": {\"Points\": 45, \"Below G\": 2, \"WebAssign\": 70},\n",
     "         \"C\": {\"Points\": 39, \"Below G\": 6, \"WebAssign\": 60},\n",
-    "         \"D\": {\"Points\": 33, \"Below G\": 0, \"WebAssign\": 50},\n",
-    "         \"F\": {\"Points\": 0, \"Below G\": 0, \"WebAssign\": 0}\n",
+    "         \"D\": {\"Points\": 33, \"Below G\": 1000, \"WebAssign\": 50},\n",
+    "         \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
     "        }\n",
     "\n",
     "## This is really dumb. I should do this differently. Want to suggest a better way? (After you've studied for your calculus test!)\n",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
     "    }\n",
     "\n",
     "    output = template.render(template_vars)\n",
-    "    HTML(string=output).write_pdf(\"test.pdf\",stylesheets=[\"./report.css\"])\n",
+    "    HTML(string=output).write_pdf(\"./reports/\"+individual.Name+\".pdf\",stylesheets=[\"./report.css\"])\n",
     "   "
    ]
   },
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,24 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# temporary stuff:\n",
     "midtermOrFinal = \"Midterm\"\n",
     "\n",
-    "print_the_report_for(class_scores[12])\n",
-    "\n",
-    "print(decide_letter_grade(midtermOrFinal, class_scores[12]))"
+    "for individual in class_scores: \n",
+    "    print_the_report_for(individual)"
    ]
   },
   {
