Fixes for final exam grading - change to thresholds

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,10 @@
     "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
     "\n",
-    "final = { \"A\": {\"Points\": 51, \"Below G\": 0, \"WebAssign\": 80},\n",
-    "         \"B\": {\"Points\": 45, \"Below G\": 2, \"WebAssign\": 70},\n",
-    "         \"C\": {\"Points\": 39, \"Below G\": 6, \"WebAssign\": 60},\n",
-    "         \"D\": {\"Points\": 33, \"Below G\": 1000, \"WebAssign\": 50},\n",
+    "final = { \"A\": {\"Points\": 46, \"Below G\": 0, \"WebAssign\": 80},\n",
+    "         \"B\": {\"Points\": 39, \"Below G\": 2, \"WebAssign\": 70},\n",
+    "         \"C\": {\"Points\": 35, \"Below G\": 6, \"WebAssign\": 60},\n",
+    "         \"D\": {\"Points\": 30, \"Below G\": 1000, \"WebAssign\": 50},\n",
     "         \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
     "        }\n",
     "\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
     "        \"webassign_grade\": individual.WebAssign,\n",
     "        \"letter_grade\": decide_letter_grade(midtermOrFinal, individual),\n",
     "        \"date\": today,\n",
-    "        \"midterm_or_final\": \"Midterm\",\n",
+    "        \"midterm_or_final\": midtermOrFinal,\n",
     "        \"grade_threshold\": midterm_threshold if midtermOrFinal==\"Midterm\" else final_threshold,\n",
     "    }\n",
     "\n",
@@ -135,16 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"test.csv\"\n",
+    "filename_change_if_youre_testing = \"test-donotupload.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
-    "better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', '01', 'V1', 'V2', 'V3', 'V4', 'F1', 'F2', 'F3', 'F4', 'I1', 'I2', 'I3', 'I4', 'I5', 'I6', 'A1', 'A2', 'S1', 'S2', 'S3', 'S4', 'S5', 'S6', 'S7', 'P1', 'P2', 'P3', 'C1', 'C2', 'C3', 'C4', 'C5', 'WebAssign']\n",
+    "better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
+    "               '01', 'V1', 'V2', 'V3', 'V4', \n",
+    "               'F1', 'F2', 'F3', 'F4', \n",
+    "               'I1', 'I2', 'I3', 'I4', 'I5', 'I6', \n",
+    "               'A1', 'A2', \n",
+    "               'C1', 'C2', 'C3', 'C4', 'C5',\n",
+    "               'S1', 'S2', 'S3/S4', '--', 'S5', 'S6', 'S7', \n",
+    "               'P1', 'P2', 'P3', 'WebAssign']\n",
     "df.columns = better_cols\n",
     "\n",
     "## Make a better index column and dump everything not grade-related\n",
@@ -162,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,12 +234,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# temporary stuff:\n",
-    "midtermOrFinal = \"Midterm\"\n",
+    "midtermOrFinal = \"Final\"\n",
     "\n",
     "for individual in class_scores: \n",
     "    print_the_report_for(individual)"
