Updates to the master template
The code now allows optional text at the top of the reports

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_threshold = \"<table class='paleGrayRows'> <thead> <tr> <th>Final Letter Grade</th> <th>Points Needed</th> <th>WebAssign Homework (entire course)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 51 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 45 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 39 points and at most 6 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 33 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 33 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
+    "final_threshold = \"<table class='paleGrayRows'><thead> <tr> <th>Final Letter Grade</th> <th>Points Needed</th> <th>WebAssign Homework (entire course)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 46 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 39 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 35 points and at most 6 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 30 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 30 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
     "midterm_threshold = \"<table class='paleGrayRows'> <thead> <tr> <th>Midterm Letter Grade</th> <th>Course Standards</th> <th>WebAssign Homework (12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 19 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 17 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 13 points and at most 4 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 11 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 11 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
     "\n",
     "midterm = { \"A\": {\"Points\": 19, \"Below G\": 0, \"WebAssign\": 80},\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,7 @@
     "        \"date\": today,\n",
     "        \"midterm_or_final\": midtermOrFinal,\n",
     "        \"grade_threshold\": midterm_threshold if midtermOrFinal==\"Midterm\" else final_threshold,\n",
+    "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
     "\n",
     "    output = template.render(template_vars)\n",
@@ -135,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"test-donotupload.csv\"\n",
+    "filename_change_if_youre_testing = \"lastweek.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,12 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# temporary stuff:\n",
     "midtermOrFinal = \"Final\"\n",
+    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
     "\n",
     "for individual in class_scores: \n",
     "    print_the_report_for(individual)"
