Here is changes.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"lastweek.csv\"\n",
+    "filename_change_if_youre_testing = \"math243finalgrades.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,13 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# temporary stuff:\n",
     "midtermOrFinal = \"Final\"\n",
-    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
+    "extra_text = \"<h2>Final course grade</h2>\"\n",
+    "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
     "\n",
     "for individual in class_scores: \n",
     "    print_the_report_for(individual)"
