Updates to the mastery grading  code...

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table class='paleGrayRows'> <thead> <tr> \n",
+      "<th>Letter Grade</th> \n",
+      "<th>Core Learning Targets</th> \n",
+      "<th>Supplemental Targets</th> </tr> \n",
+      "</thead> \n",
+      "<tbody> \n",
+      "<tr> <td>A</td> <td>Master 10 </td> <td>Master 7, Proficient 6</td> </tr> \n",
+      "<tr> <td>B</td> <td>Master 7, Proficient 3</td>Master 5, Proficient 8 <td></td> </tr> \n",
+      "<tr> <td>C</td> <td>Master 5, Proficient 5</td> <td>Master 5, Proficient 5</td> </tr> \n",
+      "<tr> <td>D</td> <td>Proficient 5</td> <td>Proficient 7</td> </tr> \n",
+      "<tr> <td>F</td> <td>Proficient &lt; 5</td> <td>----</td> </tr> \n",
+      "</tbody> </table>\n"
+     ]
+    }
+   ],
    "source": [
-    "final_threshold = \"<table class='paleGrayRows'><thead> <tr> <th>Final Letter Grade</th> <th>Points Needed</th> <th>WebAssign Homework (entire course)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 46 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 39 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 35 points and at most 6 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 30 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 30 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
-    "midterm_threshold = \"<table class='paleGrayRows'> <thead> <tr> <th>Midterm Letter Grade</th> <th>Course Standards</th> <th>WebAssign Homework (12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)</th> </tr> </thead> <tbody> <tr> <td>A</td> <td>≥ 19 points and no scores below G</td> <td>≥ 80%</td> </tr> <tr> <td>B</td> <td>≥ 17 points and at most 2 scores below G</td> <td>≥ 70%</td> </tr> <tr> <td>C</td> <td>≥ 13 points and at most 4 scores below G</td> <td>≥ 60%</td> </tr> <tr> <td>D</td> <td>≥ 11 points</td> <td>≥ 50%</td> </tr> <tr> <td>F</td> <td>&lt; 11 points</td> <td>&lt; 50%</td> </tr> </tbody> </table>\"\n",
+    "midterm_243 = (\"(12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)\", \n",
+    "               20, 80,  #A \n",
+    "               18, 2, 70, #B\n",
+    "               14, 4, 60, #C\n",
+    "               12, 50,  #D\n",
+    "               12, 50) #F\n",
+    "\n",
+    "final_243 = (\"(all)\", \n",
+    "               44, 80,  #A \n",
+    "               37, 2, 70, #B\n",
+    "               33, 6, 60, #C\n",
+    "               29, 50,  #D\n",
+    "               29, 50) #F\n",
+    "\n",
+    "midterm_242 = (\"(through section 3.5)\", \n",
+    "               21, 80,  #A \n",
+    "               19, 2, 70, #B\n",
+    "               16, 4, 60, #C\n",
+    "               14, 50,  #D\n",
+    "               14, 50) #F\n",
+    "\n",
+    "final_242 = (\"(all)\", \n",
+    "               43, 80,  #A \n",
+    "               36, 2, 70, #B\n",
+    "               32, 6, 60, #C\n",
+    "               28, 50,  #D\n",
+    "               28, 50) #F\n",
+    "\n",
+    "midterm_321 = ( 5, 3, 2, #A \n",
+    "               4, 1, 2, 2, #B\n",
+    "               3, 2, 1, 3, #C\n",
+    "               3, 3, #D\n",
+    "               3) #F\n",
+    "\n",
+    "final_321 = ( 10, 7, 6, #A \n",
+    "               7, 3, 5, 8, #B\n",
+    "               5, 5, 5, 5, #C\n",
+    "               5, 7, #D\n",
+    "               5) #F\n",
+    "\n",
+    "calculus_threshold_table = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
+    "<th>Letter Grade</th> \n",
+    "<th>Course Learning Targets</th> \n",
+    "<th>WebAssign Homework %s</th> </tr> \n",
+    "</thead> \n",
+    "<tbody> \n",
+    "<tr> <td>A</td> <td>≥ %d points and no scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
+    "<tr> <td>B</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
+    "<tr> <td>C</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
+    "<tr> <td>D</td> <td>≥ %d points</td> <td>≥ %d%%</td> </tr> \n",
+    "<tr> <td>F</td> <td>&lt; %d points</td> <td>&lt; %d%%</td> </tr> \n",
+    "</tbody> </table>\"\"\"\n",
+    "\n",
+    "\n",
+    "discrete_threshold_table = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
+    "<th>Letter Grade</th> \n",
+    "<th>Core Learning Targets</th> \n",
+    "<th>Supplemental Targets</th> </tr> \n",
+    "</thead> \n",
+    "<tbody> \n",
+    "<tr> <td>A</td> <td>Master %d </td> <td>Master %d, Proficient %d</td> </tr> \n",
+    "<tr> <td>B</td> <td>Master %d, Proficient %d</td>Master %d, Proficient %d <td></td> </tr> \n",
+    "<tr> <td>C</td> <td>Master %d, Proficient %d</td> <td>Master %d, Proficient %d</td> </tr> \n",
+    "<tr> <td>D</td> <td>Proficient %d</td> <td>Proficient %d</td> </tr> \n",
+    "<tr> <td>F</td> <td>Proficient &lt; %d</td> <td>----</td> </tr> \n",
+    "</tbody> </table>\"\"\"\n",
+    "\n",
+    "print(discrete_threshold_table % final_321)\n",
     "\n",
     "midterm = { \"A\": {\"Points\": 19, \"Below G\": 0, \"WebAssign\": 80},\n",
     "           \"B\": {\"Points\": 17, \"Below G\": 2, \"WebAssign\": 70},\n",
@@ -43,13 +128,6 @@
     "           \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
     "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
-    "\n",
-    "final = { \"A\": {\"Points\": 46, \"Below G\": 0, \"WebAssign\": 80},\n",
-    "         \"B\": {\"Points\": 39, \"Below G\": 2, \"WebAssign\": 70},\n",
-    "         \"C\": {\"Points\": 35, \"Below G\": 6, \"WebAssign\": 60},\n",
-    "         \"D\": {\"Points\": 30, \"Below G\": 1000, \"WebAssign\": 50},\n",
-    "         \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
-    "        }\n",
     "\n",
     "## This is really dumb. I should do this differently. Want to suggest a better way? (After you've studied for your calculus test!)\n",
     "def decide_letter_grade(midterm_or_final, individual):\n",
@@ -92,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +195,7 @@
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
     "\n",
+    "    print(individual)\n",
     "    output = template.render(template_vars)\n",
     "    HTML(string=output).write_pdf(\"./reports/\"+individual.Name+\".pdf\",stylesheets=[\"./report.css\"])\n",
     "   "
@@ -136,65 +215,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"math243finalgrades.csv\"\n",
+    "filename_change_if_youre_testing = \"math243_testdata.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
-    "better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
-    "               '01', 'V1', 'V2', 'V3', 'V4', \n",
+    "\n",
+    "math243_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
+    "               'V1', 'V2', 'V3', 'V4', 'V5',\n",
     "               'F1', 'F2', 'F3', 'F4', \n",
-    "               'I1', 'I2', 'I3', 'I4', 'I5', 'I6', \n",
+    "               'INT1', 'INT2', 'INT3', 'INT4', 'INT5', \n",
     "               'A1', 'A2', \n",
     "               'C1', 'C2', 'C3', 'C4', 'C5',\n",
-    "               'S1', 'S2', 'S3/S4', '--', 'S5', 'S6', 'S7', \n",
+    "               'S1', 'S2', 'S3', 'S4', 'S5', \n",
     "               'P1', 'P2', 'P3', 'WebAssign']\n",
+    "\n",
+    "math242_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
+    "               'F1', 'F2',\n",
+    "               'L1', 'L2', \n",
+    "               'D1', 'D2', \n",
+    "                       'DC1', 'DC2', 'DC3,', 'DC4', 'DC5',\n",
+    "                       'DA1', 'DA2', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
+    "                       'INT1', 'INT2', 'INT3', 'INT4', 'INT5', \n",
+    "               'IA1', 'IA2', 'IA3', 'IA4'\n",
+    "               'IF1', 'IF2', 'WebAssign']\n",
+    "math321_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
+    "                       'O1', 'O2 Core', 'O3', 'O4 Core', 'O5',\n",
+    "                       'L1 Core', 'L2', 'L3', 'L4', 'L5 Core',\n",
+    "                       'N1 Core', 'N2 Core', 'N3', 'N4', 'N5', 'N6',\n",
+    "                       'R1 Core', 'R2', 'R3', 'R4 Core',\n",
+    "                       'C1 Core', 'C2 Core', 'C3', 'C4']\n",
+    "\n",
+    "\n",
+    "better_cols = math243_better_cols\n",
+    "\n",
     "df.columns = better_cols\n",
     "\n",
     "## Make a better index column and dump everything not grade-related\n",
     "df['Name'] = df['Last Name'] + ', ' + df['First Name']\n",
     "df.drop(['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability'], axis=1, inplace=True)\n",
-    "df.set_index(\"Name\", inplace=True)\n"
+    "df.set_index(\"Name\", inplace=True)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the tools for reading the S, G, and N strings into their corresponding numeric values"
+    "Define the tools for reading the P, PM, and empty strings into their corresponding numeric values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sgn_to_number(sgn):\n",
     "#Note that S has the value 1, G has the value 0.5, and N has the value 0; else is 0; \n",
-    "    if (sgn == \"S\"):\n",
+    "    if (sgn == \"PM\"):\n",
+    "        return 2\n",
+    "    elif (sgn == \"P\"):\n",
     "        return 1\n",
-    "    elif (sgn == \"G\"):\n",
-    "        return 0.5\n",
     "    else:\n",
     "        return 0\n",
     "    \n",
     "def marks_to_score(marks):\n",
-    "    ## First, extract the last two entries:\n",
-    "    try: \n",
-    "        marks = marks[-2:]\n",
-    "    except TypeError:  # encountered NaN or not a string\n",
-    "        return 0\n",
-    "    except IndexError: # encountered NaN; bah\n",
-    "        return 0\n",
     "    \n",
     "    # this needs to be a dictionary, not a Marks namedtuple\n",
-    "    return {'score' : sum(map(sgn_to_number, marks)), \n",
-    "                'number of ns' : marks.count(\"N\")+marks.count(\"Z\")}\n",
+    "    return {'score' : sgn_to_number(marks), \n",
+    "                'number of ns' : 1 if marks==\"N\" else 0}\n",
     "\n",
     "def summative(marks):\n",
     "    score_so_far = 0\n",
@@ -219,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,22 +325,49 @@
     "    class_scores.append( Individual(Name=index, \n",
     "                                    Marks=summative(row.apply(marks_to_score)), \n",
     "                                    WebAssign=row.loc['WebAssign'], \n",
-    "                                    RawData=raw) )\n"
+    "                                    RawData=raw) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Individual(Name='Ammerman, Jeffrey', Marks=Marks(Score=21, NumberOfNs=1), WebAssign=73.46, RawData=     Standard  Marks\n",
+      "0          V1     PM\n",
+      "1          V2     PM\n",
+      "2          V3     PM\n",
+      "3          V4     PM\n",
+      "5          F1     PM\n",
+      "6          F2     PM\n",
+      "7          F3     PM\n",
+      "8          F4     PM\n",
+      "9        INT1     PM\n",
+      "10       INT2     PM\n",
+      "11       INT3      N\n",
+      "12       INT4      P\n",
+      "29  WebAssign  73.46)\n"
+     ]
+    }
+   ],
    "source": [
-    "# temporary stuff:\n",
-    "midtermOrFinal = \"Final\"\n",
-    "extra_text = \"<h2>Final course grade</h2>\"\n",
-    "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
+    "# # temporary stuff:\n",
+    "# midtermOrFinal = \"Final\"\n",
+    "# #extra_text = \"<h2>Final course grade</h2>\"\n",
+    "# #extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
+    "extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
     "\n",
-    "for individual in class_scores: \n",
-    "    print_the_report_for(individual)"
+    "# for individual in class_scores: \n",
+    "#     print_the_report_for(individual)\n",
+    "\n",
+    "midtermOrFinal = \"Midterm\"\n",
+    "\n",
+    "midterm_threshold = calculus_threshold_table % midterm_243\n",
+    "print_the_report_for(class_scores[5])"
    ]
   },
   {
